--- a/manifest.json
+++ b/manifest.json
@@ -30,8 +30,15 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "js": ["scripts/content.js"]
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "popin/popin.js"
+            ],
+            "css": [
+                "popin/popin.css"
+            ]
         }
     ]
 }
