--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "GoRest!",
+    "name": "test",
     "version": "1.0",
     "description": "Prends des pauses",
     "permissions": [
